--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 title: I4INFO
 header-img: img/home-bg.jpg
 email: heeraj123@gmail.com
-description: "The official blog of I4INFO, Knowledge for the better future!"
+description: "Blog by a common man!!!"
 baseurl: ""
-url: "http://i4info.in/"
-twitter_username: heeraj123
-github_username:  heeraj123
+url: "https://heeraj.com/blog/"
+twitter_username: heerajnair
+github_username:  h33raj
 facebook_username:  heeraj123
 
 # Build settings
