--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: I4INFO
 header-img: img/home-bg.jpg
 email: heeraj123@gmail.com
 description: "Blog by a common man!!!"
-baseurl: ".."
+baseurl: ""
 url: "https://heeraj.com/blog/"
 twitter_username: heerajnair
 github_username:  h33raj
